[project]
name = "fastapiproject"
version = "0.1.0"
description = "Fast Project Tutorialtou"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "asyncpg>=0.30.0",
    "fastapi>=0.131.0",
    "fastapi-users[sqlalchemy]>=15.0.4",
    "imagekitio>=5.2.0",
    "python-dotenv>=1.2.1",
    "streamlit>=1.54.0",
    "uvicorn[standard]>=0.41.0",
]
